--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:guoyao132/gy-commom.git"
+    "url": "git@github.com:guoyao132/gy-map.git"
   }
 }
