--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
     "openlayers",
     "map components"
   ],
-  "version": "0.0.3",
+  "version": "0.1.0",
   "license": "MIT",
   "private": false,
   "files": [
     "lib",
+    "scripts",
     "README.md"
   ],
   "main": "lib/gy-map.umd.js",
   "scripts": {
-    "serve": "vite",
-    "build-only": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
-    "build": "vue-tsc --noEmit && vite build",
-    "build:map": "vue-tsc --noEmit && vite build --mode map",
-    "type-check": "vue-tsc --noEmit"
+    "postinstall": "node ./scripts/postinstall.js",
+    "serve": "pnpm switch:3 && vite",
+    "build": "pnpm switch:3 && vite build",
+    "switch:2": "npx vue-demi-switch 2",
+    "switch:3": "npx vue-demi-switch 3",
+    "map3": "pnpm switch:3 && vue-tsc --noEmit && vite build --config vite.config3.ts",
+    "map2": "pnpm switch:2 && vue-tsc --noEmit && cd v2 && vite build --config vite.config2.ts",
+    "map": "pnpm map3 && pnpm map2",
+    "push": "pnpm map3 && pnpm map2 && npm publish"
   },
   "dependencies": {
-    "ol": "^7.1.0"
+    "ol": "^7.1.0",
+    "vue-demi": "^0.13.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.56",
@@ -31,26 +36,40 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/composition-api": "^1.7.1",
     "@vue/tsconfig": "^0.1.3",
     "css-vars-ponyfill": "^2.4.8",
+    "element-plus": "^2.2.21",
     "highlight.js": "^10.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "npm-run-all": "^4.1.5",
+    "pinia": "^2.0.21",
     "terser": "^5.15.1",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.0.9",
-    "vue-tsc": "^0.40.7",
-    "vue3-hljs": "^0.1.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-vue2": "^2.0.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
-    "pinia": "^2.0.21",
-    "element-plus": "^2.2.21"
+    "vue-tsc": "^0.40.7",
+    "vue2": "npm:vue@2.6.14",
+    "vue3": "npm:vue@3.2.38",
+    "vue3-hljs": "^0.1.4"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:guoyao132/gy-map.git"
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   }
 }
